# cmake-project-template

./: .gitignore  CMakeConfig.cmake  CMakeLists.txt  README.md  toolchain_arm_none_eabi_gcc.cmake
src/: main.cpp
